# FieldReport

./: .clang-format  CMakeLists.txt  LICENSE  Main.qml  MonthsModel.cpp  MonthsModel.h  README.md  Style.cpp  Style.h  main.cpp  qtquickcontrols2.conf
App/: CMakeLists.txt  Main.qml
Native/: Android.cpp  Android.h
android/: AndroidManifest.xml  build.gradle
controls/: Calendar.qml  Card.qml  DividerHorizontal.qml  FieldServiceTimer.qml  FrameDelegates.qml  HeaderBar.qml  InfoMessage.qml  IntervalTimeRectangle.qml  MonthCalendar.qml  MonthView.qml  NavigationBar.qml  NavigationButton.qml  Page.qml  ReportComponent.qml  ScrollablePage.qml  UserButton.qml  UserContentList.qml  UserMenu.qml  WeekCalendar.qml
fonts/: fonts-roboto.qrc
icons/: CMakeLists.txt  material-round.cmake  material.cmake
pages/: InterestedPage.qml  MainPage.qml  ReportPage.qml  SettingsPage.qml
